tests/language_modules/05_records/invalid_semantics/unknown_record_field_type.vf
module UnknownRecordFieldType

type Account is record
    id: MissingType
end record

end UnknownRecordFieldType